# modular-web-crawler

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
docs/: design.md  runbook.md
migrations/: V001_init.sql
src/: cli.py
src/app/: __init__.py  config.py  db.py  fetcher.py  models.py  parser.py  queue.py  runner.py  storage.py  url_checker.py
tests/: conftest.py  test_integration.py
tests/fixtures/: index.html  page1.html
tests/integration/: test_crawler.py
tests/unit/: test_parser.py  test_parser_links.py
