[project]
name = "modular-web-crawler"
version = "0.1.0"
description = "A single-threaded modular web crawler with Postgres and MinIO storage"
authors = [
    {name = "pouya abedpour", email = "pouyaabedpour@gmail.com"},
]
dependencies = [
    "httpx>=0.24.0",
    "beautifulsoup4>=4.12.2",
    "asyncpg>=0.27.0",
    "aioboto3>=10.0.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=23.1.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "respx>=0.20.0",
    "aioresponses>=0.7.0",
]
dev = [
    "black>=23.0.0",
    "ruff>=0.0.291",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
select = ["E", "F", "I"]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
crawler = "cli:app"